# MMCoreAPI

./: .gitignore  CMakeLists.txt  README.md  go.mod  vcpkg.json
MMCoreC/: MMCoreC.cpp  MMCoreC.h  dllmain.cpp
MMCoreC/examples/: CMakeLists.txt  README.md  main.c
MMCoreGo/: errors.go  event_callback.c  mmcore.go  mmcore_test.go
MMCoreGo/demo/: callback.go
